--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -4,5 +4,6 @@
   {{article-tile article=article destroyArticle="destroyArticle"}}
   {{/each}}
 </ul>
+{{new-article saveArticle2="saveArticle3"}}
 </div>
 {{#link-to 'about'}}About{{/link-to}}
